<resources>
    <string name="app_name">FlipCam</string>
    <string name="title">No Permission</string>
    <string name="message">Unavailability of permissions will render FlipCam not to function correctly.\n\n
        Please reopen the application or go to Settings, if you wish to grant permission.</string>
    <string name="incompatibleMessageTitle">Issue with Android 13</string>
    <string name="incompatibleMessage">FlipCam cannot function on Android version 13 due to a known issue in Android.\n\nWe apologize for the inconvenience.\n\nWe are aiming to fix the issue in future version of Android 14 soon.</string>
    <string name="exit">EXIT</string>
    <string name="FC_ROOT">/Camera/</string>
    <string name="PATH_SLASH">/</string>
    <string name="FC_VID_PREFIX">FC_VID_</string>
    <string name="FC_IMG_PREFIX">FC_IMG_</string>
    <string name="VID_EXT">.mp4</string>
    <string name="IMG_EXT">.jpeg</string>
    <string name="ANOTHER_IMG_EXT">.jpg</string>
    <string name="DATE_FORMAT_FOR_FILE">yyyy-MM-dd-HH-mm-ss</string>
    <string name="MEM_PF_KB"> KB</string>
    <string name="MEM_PF_MB"> MB</string>
    <string name="MEM_PF_GB"> GB</string>
    <string name="START_TIME">00 : 00 : 00</string>
    <string name="START_MEMORY">0 MB</string>
    <string name="VIDEO_MODE">VIDEO</string>
    <string name="PHOTO_MODE">PHOTO</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="MODE">MODE</string>
    <string name="RECORD_SAVED">VIDEO SAVED</string>
    <string name="IMAGE_SAVED">IMAGE SAVED</string>
    <string name="imageType">"image/jpeg"</string>
    <string name="videoType">"video/mp4"</string>
    <string name="NO_IMAGE">No Photos or Videos</string>
    <string name="deleteTitle">Delete Media</string>
    <string name="loadTitle">Load Media</string>
    <string name="deleteMessage">Do you want to delete the %1$s?</string>
    <string name="noConnectionMessage">There seems to be no Internet Connection. Please check your connection, or enable Wi-Fi and try again.</string>
    <string name="okToDelete">OK</string>
    <string name="delete">DELETE</string>
    <string name="cancelToDelete">CANCEL</string>
    <string name="shareTitle">Share Media</string>
    <string name="shareFacebook">Upload to Facebook</string>
    <string name="noConnectionTitle">Connection Failure</string>
    <string name="shareMessage">There are no installed apps that can share your %1$s.\n\nFlipCam can share to Facebook without the app. Would you like to share?</string>
    <string name="shareFacebookMessage">The media will be uploaded to Facebook</string>
    <string name="continuetoFB">CONTINUE</string>
    <string name="queuedForUpload">Media queued for upload. Please check notification bar for status.</string>
    <string name="logoutFBMessage">YOU HAVE BEEN LOGGED OUT OF FACEBOOK</string>
    <string name="logoutFB">LOGOUT OF FACEBOOK</string>
    <string name="permissionTitleFacebook">Permission for Facebook</string>
    <string name="noWhatsapp">WhatsApp not available</string>
    <string name="whatsappRequired">WhatsApp needs to be installed to be able to share Photos/Videos to another WhatsApp contact.</string>
    <string name="uploadFB">Upload to Facebook</string>
    <string name="permissionMessageFacebook">FlipCam requires you to login to Facebook to request below permission(s) to upload Photos/Videos:</string>
    <string name="optionlogoutMessageFacebook">You have an option to logout before you upload.</string>
    <string name="FBPermissions">publish_actions</string>
    <string name="loginFB">LOGIN TO FACEBOOK</string>
    <string name="notnow">NOT NOW</string>
    <string name="facebook">Facebook</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="facebook_app_id">308890512940081</string>
    <string name="fb_login_protocol_scheme">fb308890512940081</string>
    <string name="mediaService">FlipCam Media Upload Service</string>
    <string name="googleDriveService">Google Drive Upload Service</string>
    <string name="dropboxService">Dropbox Upload Service</string>
    <string name="uploadErrorMessage">No internet connection. Upload Canceled.</string>
    <string name="fileErrorMessage">File %1$s has been deleted or moved.</string>
    <string name="uploadSuccessMessageLess">%1$s Uploaded.</string>
    <string name="uploadSuccessMessage">%1$s Upload Completed Successfully.\nFile %2$s</string>
    <string name="uploadInProgress">%1$s upload in progress</string>
    <string name="uploadQueuedFile">%1$s queued for upload. \n File %2$s</string>
    <string name="uploadQueued">%1$s queued for upload.</string>
    <string name="uploadQueuedAlert">%1$s queued for upload.\nCheck status bar notification for status.</string>
    <string name="uploadFinish">Finishing Upload.</string>
    <string name="errorTitle">Upload Interrupted</string>
    <string name="uploadInProgressTitle">Upload in Progress</string>
    <string name="autoUploadInProgressTitle">Uploading to %1$s</string>
    <string name="autoUploadInProgress">Auto Upload in Progress</string>
    <string name="uploadCompleted">%1$s Upload Completed</string>
    <string name="connectionRetry">Possible Connection Loss.\nRetry for %1$d secs (%2$d)....</string>
    <string name="connectionRetryLess">Possible Connection Loss. Retrying...</string>
    <string name="whatsappPackage">com.whatsapp</string>
    <string name="facebookPackage">com.facebook.katana</string>
    <string name="settingTitle">FlipCam Settings</string>
    <string name="saveMedia">Save Media in</string>
    <string name="phoneMemory">Phone Memory</string>
    <string name="sdCard">SD Card</string>
    <string name="phoneMemoryLimit">Phone Memory Limit</string>
    <string name="memoryThresholdLimit">Warning Threshold : %1$s</string>
    <string name="phoneMemoryLimitDisabled">Disabled</string>
    <string name="phoneMemoryLimitMsg">The amount of phone memory below which you would like a warning.</string>
    <string name="saveToCloud">Auto Upload To Cloud</string>
    <string name="googleDrive">Google Drive</string>
    <string name="dropbox">Dropbox</string>
    <string name="showMemConsumed">Show Memory Consumed For Video</string>
    <string name="showMemConsumedMsg">Show how much memory is being consumed by the current video recording, in the recording window.</string>
    <string name="enableShutterSound">Enable Shutter Sound</string>
    <string name="enableShutterSoundMsg">Enable shutter sound of camera when clicking photos.\n\nMay not be supported on some devices.</string>
    <string name="noAudioSubHeading">No Audio for Video</string>
    <string name="audioEnableMessage">AUDIO ENABLED FOR VIDEO</string>
    <string name="audioDisableMessage">AUDIO DISABLED FOR VIDEO</string>
    <string name="okBtn">OK</string>
    <string name="cancelBtn">CANCEL</string>
    <string name="phoneMemoryLimitHeading">Phone Memory Limit Warning</string>
    <string name="memoryThreshold">If the amount of available phone memory is below this limit, FlipCam will give you a warning message before
    you start to shoot a video/photo.</string>
    <string name="memoryThreasholdTitle">Phone Memory Threshold</string>
    <string name="validValuesThreshold"><font size="12">Threshold value should be\n greater than 0</font></string>
    <string name="validThresholdMsg">Please enter a number greater than 0</string>
    <string name="thresholdSaved">Phone memory threshold set to %1$s %2$s.</string>
    <string name="disableThreshold">Disable Threshold Check</string>
    <string name="thresholdExceeds">The threshold entered is the same or more than the internal storage (%1$s %2$s) of your phone. Please enter a lower value.</string>
    <string name="thresholdLowerThanMinimum">The threshold value cannot be lower than %1$s. Please enter a higher value.</string>
    <string name="saveToCloudTitle">Sign in to %1$s</string>
    <string name="continuesignin">CONTINUE</string>
    <string name="notnowsignin">NOT NOW</string>
    <string name="uploadmsg">This option enables you to automatically upload any photos/videos created from now, onto the cloud.\n\nUser Sign in required for the cloud service, to which the user is opting to upload.</string>
    <string name="signinfail">Sign In failed either due to Internet connection issue or cancellation by user.</string>
    <string name="signoutcloud">Signed out of %1$s.\n\nAuto upload has been disabled.</string>
    <string name="uploadFolder">Name of the upload folder in %1$s.</string>
    <string name="uploadFolderTitle">Create Upload Folder</string>
    <string name="createUploadFolder">CREATE</string>
    <string name="cancelUploadFolder">CANCEL</string>
    <string name="uploadFolderIncorrectDropbox">Incorrect characters in folder name. Please try again.</string>
    <string name="uploadFolderEmpty">Folder Name is empty. Please give a folder name.</string>
    <string name="folderCreatedSuccess">Folder %1$s Created Successfully.</string>
    <string name="foldercreateErrorGoogleDrive">Error creating folder in %1$s. Please check your internet connection and try again.</string>
    <string name="permissionRationale">We need the google accounts info to check if you have already signed in. </string>
    <string name="permissionForAccounts">FlipCam would like to read your contacts, only to check if you have already signed in to your Google Account.
        \n\nThis is necessary to be able to auto upload to Google Drive.\n\nClick Yes to give permission.</string>
    <string name="permissionHeader">Account Check Permission</string>
    <string name="yesPermission">YES</string>
    <string name="noPermission">NO</string>
    <string name="autouploadFolderCreated">FlipCam will now auto upload your photos/videos onto this folder in %1$s.\n\nPlease check your notifications for upload status.</string>
    <string name="autouploadFolderUpdated">FlipCam will now auto upload your photos/videos onto <u>%1$s</u> folder in %2$s.\n\nPlease check your notifications for upload status.</string>
    <string name="signInProgress">Fetching Google Account information in your phone for signing into %1$s.\n\nPlease Wait...</string>
    <string name="signInProgressDropbox">Redirecting to Dropbox Website...</string>
    <string name="createFolder">Creating folder in %1$s...</string>
    <string name="signInProgressTitle">Sign In to %1$s</string>
    <string name="totalPhoneMemory">Total Phone Memory</string>
    <string name="totalFreeMemory">Free Memory</string>
    <string name="memoryStatus">Phone Memory Status</string>
    <string name="creationUnsuccessful">Folder not created in Google Drive. Please try again.</string>
    <string name="autoUploadEnabled">Auto Upload Enabled</string>
    <string name="createUploadFolderDropbox">Create a subfolder inside FlipCam for my uploads.</string>
    <string name="flipCamContentDescription">FlipCam Icon</string>
    <string name="placeholderContentDescription">Placeholder Icon</string>
    <string name="dropboxContentDescription">Dropbox Icon</string>
    <string name="folderCreated">Folder Created Successfully.</string>
    <string name="warningSymbol">Warning Message</string>
    <string name="externalVideoPlayerMessage">FlipCam will use your favorite media player to play videos.\n\n
        This can be changed in Video Settings.</string>
    <string name="externalVideoPlayerCheckbox">Do not Show Again</string>
    <string name="externalVideoPlayerTitle">Favorite Video Player</string>
    <string name="folderSelectTitle">Media Location</string>
    <string name="phoneContentDescription">Phone Folder</string>
    <string name="memoryContentDescription">SD Card Folder</string>
    <string name="bothContentDescription">Both Folder</string>
    <string name="phoneLocation">PHONE</string>
    <string name="sdcardLocation">SD CARD</string>
    <string name="allLocation">ALL</string>
</resources>