<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backColorSettingMsg"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/autoUploadHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/turqoise"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/flipCamIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/flipCamContentDescription"/>

        <TextView
            android:id="@+id/autoUploadTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="10dp"
            android:text="@string/autoUploadEnabled"
            android:textAlignment="center"
            android:textColor="@color/mediaControlColor"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/placeHolderIconAutoUpload"
            android:layout_width="64dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/placeholder"
            android:contentDescription="@string/placeholderContentDescription"/>

    </LinearLayout>

    <TextView
        android:id="@+id/folderCreatedMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/folderCreatedSuccess"
        android:textColor="@color/turqoise" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:srcCompat="@drawable/ic_done"
        android:contentDescription="@string/folderCreated"/>

    <TextView
        android:id="@+id/autoUploadMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/autouploadFolderCreated"
        android:textAlignment="center"
        android:textColor="@color/turqoise" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/enableOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:onClick="closeAutoUploadWithFolder"
            android:text="@string/okToDelete" />

    </LinearLayout>
</LinearLayout>