<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backColorDialog"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/shareFB"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:weightSum="1">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="64dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/share_to_facebook" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/uploadFB"
            android:textColor="@color/saveText"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:layout_weight="0.00"
        android:gravity="center"
        android:text="@string/permissionMessageFacebook"
        android:textColor="@color/turqoise"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:layout_weight="0.00"
        android:gravity="center"
        android:text="@string/FBPermissions"
        android:textColor="@color/turqoise"
        android:textSize="13sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:layout_weight="0.00"
        android:gravity="center"
        android:text="@string/optionlogoutMessageFacebook"
        android:textColor="@color/turqoise"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/colorPrimary"
        android:onClick="loginToFacebook"
        android:text="@string/loginFB"
        android:textColor="@color/saveText"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:onClick="notNowFB"
        android:text="@string/notnow"
        android:textColor="@color/saveText"
        android:textStyle="bold" />

</LinearLayout>