<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/warningParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backColorDialog"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/turqoise"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".05"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/flipCamContentDescription"/>

        <TextView
            android:id="@+id/warningTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="10dp"
            android:text="@string/noConnectionTitle"
            android:textAlignment="center"
            android:textColor="@color/mediaControlColor"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".05"
            android:visibility="invisible"
            app:srcCompat="@drawable/placeholder"
            android:contentDescription="@string/placeholderContentDescription"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/warningSign"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:layout_weight="0.20"
            app:srcCompat="@drawable/ic_warning"
            android:contentDescription="@string/warningSymbol"/>

        <TextView
            android:id="@+id/warningText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/noConnMsgLeftAndRightMargin"
            android:layout_marginEnd="@dimen/noConnMsgLeftAndRightMargin"
            android:layout_weight="1"
            android:paddingBottom="@dimen/noConnMsgTopAndBottomPadding"
            android:paddingTop="@dimen/noConnMsgTopAndBottomPadding"
            android:text="@string/noConnectionMessage"
            android:textColor="@color/turqoise"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/okBtnBottomMargin"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/okButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/okBtnLeftAndRightMargin"
            android:layout_marginEnd="@dimen/okBtnLeftAndRightMargin"
            android:layout_weight="0.5"
            android:background="@color/thumbnailPlaceholder"
            android:onClick="okToClose"
            android:text="@string/okToDelete"
            android:textColor="@color/turqoise" />
    </LinearLayout>
</LinearLayout>