<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backColorSettingMsg"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/autoUploadHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/turqoise"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/flipCamIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher"
                android:contentDescription="@string/flipCamContentDescription" />

            <TextView
                android:id="@+id/autoUploadTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/autoUploadEnabled"
                android:textAlignment="center"
                android:textColor="@color/mediaControlColor"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/placeHolderIconAutoUpload"
                android:layout_width="64dp"
                android:layout_height="50dp"
                android:paddingStart="10dp"
                app:srcCompat="@drawable/dropbox"
                android:contentDescription="@string/dropboxContentDescription"/>

        </LinearLayout>

        <TextView
            android:id="@+id/dropBoxFolderCreated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/headTextTopMargin"
            android:layout_marginStart="@dimen/headTextLeftMargin"
            android:layout_marginEnd="@dimen/headTextLeftMargin"
            android:layout_marginTop="20dp"
            android:text="@string/autouploadFolderUpdated"
            android:textAlignment="center"
            android:textColor="@color/turqoise"
            android:textSize="13sp" />

        <CheckBox
            android:id="@+id/dropBoxFolderCreateEnable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/headTextTopMargin"
            android:layout_marginStart="@dimen/headTextLeftMargin"
            android:layout_marginEnd="@dimen/headTextLeftMargin"
            android:layout_marginTop="@dimen/headTextTopMargin"
            android:layout_weight="1"
            android:checked="false"
            android:onClick="createDropboxFolder"
            android:text="@string/createUploadFolderDropbox"
            android:textColor="@color/turqoise"
            android:textSize="12sp"
            app:buttonTint="@color/turqoise" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/headTextTopMargin"
                android:layout_marginTop="@dimen/headTextTopMargin"
                android:onClick="accessGrantedDropbox"
                android:text="@string/okBtn" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>