<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/externalVideoPlayerRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/external_play_color"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/external_play_color"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight=".05"
            android:contentDescription="@string/flipCamContentDescription"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/externalVideoPlayerHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="10dp"
            android:text="@string/externalVideoPlayerTitle"
            android:textAlignment="center"
            android:textColor="@color/saveText"
            android:textSize="13sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".05"
            android:contentDescription="@string/placeholderContentDescription"
            android:visibility="invisible"
            app:srcCompat="@drawable/placeholder" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:background="@color/saveText"
        android:gravity="center"
        android:orientation="horizontal">

    </LinearLayout>

    <TextView
        android:id="@+id/externalVideoPlayerMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/externalVideoPlayerMessage"
        android:textColor="@color/saveText"
        android:textSize="13sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/donotShowAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:text="@string/externalVideoPlayerCheckbox"
        android:textColor="@color/saveText"
        android:textSize="13sp"
        app:buttonTint="@color/saveText" />

    <ImageView
        android:id="@+id/closeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

</LinearLayout>